--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@ html, body{
     font-family: Roboto, sans-serif;
     margin:0;
     height: 100%;
+    background-color: #FAF7F0 ;
 }
 
 .main{
@@ -20,8 +21,8 @@ html, body{
     border-color: black;
     border-style: solid;
     padding: 10px;
-    width: 220px;
-    height: 203px;
+    width: 330px;
+    height: 305px;
 }
 
 .display{
@@ -32,10 +33,14 @@ html, body{
     border-style: solid;
     background-color: white;
     width: auto;
-    height: 30px;
+    height: 45px;
     margin: 1px;
     align-items: center;
     padding-right: 5px;
+}
+.display-screen{
+    color:black;
+    display:flex;
 }
 
 .calculator-container{
@@ -62,8 +67,8 @@ html, body{
     border-color: black;
     border-style: solid;
     background-color: lightgray;
-    width: 50px;
-    height: 30px;
+    width: 75px;
+    height: 45px;
     margin: 1px;
     align-items: center;
 
@@ -76,8 +81,8 @@ html, body{
     border-color: black;
     border-style: solid;
     background-color: gray;
-    width: 50px;
-    height: 30px;
+    width: 75px;
+    height: 45px;
     margin: 1px;
     align-items: center;
 }
