create intuitive UI add known issues add style

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,9 @@ html, body{
     border-style: solid;
     padding: 10px;
     width: 330px;
-    height: 305px;
+    height: 350px;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 .display{
@@ -33,14 +35,10 @@ html, body{
     border-style: solid;
     background-color: white;
     width: auto;
-    height: 45px;
+    min-height: 45px;
     margin: 1px;
     align-items: center;
     padding-right: 5px;
-}
-.display-screen{
-    color:black;
-    display:flex;
 }
 
 .calculator-container{
@@ -66,7 +64,7 @@ html, body{
     border-radius: 5px;
     border-color: black;
     border-style: solid;
-    background-color: lightgray;
+    background-color: #EAE0DA;
     width: 75px;
     height: 45px;
     margin: 1px;
@@ -80,14 +78,26 @@ html, body{
     border-radius: 5px;
     border-color: black;
     border-style: solid;
-    background-color: gray;
+    background-color: lightgray;
     width: 75px;
     height: 45px;
     margin: 1px;
     align-items: center;
 }
 
+.button-special{
+    width: 155px;
+    height: 45px;
+    background-color: #EAC7C7;
+
+
+}
+
 .button-calculate{
-    background-color: dodgerblue;
+    background-color: #A0C3D2;
     color: white;
+}
+
+.active{
+    background-color: #ECA869;
 }
